# csrfspa

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
attacker/: package-lock.json
attacker/src/: App.tsx
csrfspa/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/scripts/: entrypoint.dev.sh
frontend/src/: App.tsx
nginx/conf.d/: default.conf
scripts/: entrypoint.dev.sh
sns/: models.py  views.py
sns/migrations/: 0001_initial.py
